crates/loxia-tui/src/widgets/snapshots/loxia_tui__widgets__column__tests__column_snapshot_error.snap
---
source: crates/loxia-tui/src/widgets/column.rs
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 20, height: 10 },
    content: [
        "┌Artists───────────┐",
        "│network timed out │",
        "│while fetching    │",
        "│this column       │",
        "│unbound retry     │",
        "│                  │",
        "│                  │",
        "│                  │",
        "│                  │",
        "└──────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Indexed(9), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Indexed(9), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 2, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Indexed(9), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 3, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Indexed(9), bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
    ]
}
